Adding Makefile, docker-compose and React component

--- a/app/cluster_admin/templates/base.html
+++ b/app/cluster_admin/templates/base.html
@@ -52,6 +52,17 @@
   <script src="{% static 'coreui/js/config.js' %}"></script>
   <script src="{% static 'coreui/js/color-modes.js' %}"></script>
   <link href="{% static 'coreui/vendors/coreui/chartjs/css/coreui-chartjs.css' %}" rel="stylesheet">
+
+  <!-- Pseudo package.json -->
+  <script src="https://unpkg.com/react@18.3.1/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.3.1/umd/react-dom-server.browser.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.22.6/babel.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@babel/plugin-proposal-optional-chaining@7.21.0/lib/index.js"></script>
+  <script src="https://unpkg.com/browse/axios@1.7.9/dist/axios.js"></script>
+  <script src="https://unpkg.com/filesize@10.1.2/dist/filesize.min.js"></script>
+  <!-- Pseudo package.json -->
+
 </head>
 
 <body>
